Edit index.html and recipes/tofu.html to add links

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="./recipes/tofu.html">Sheet Pan Tofu Crumbles</a>
     </body>
 </html>
