create images/tofu.jpg and edit recipes/tofu.html

--- a/recipes/tofu.html
+++ b/recipes/tofu.html
@@ -7,7 +7,26 @@
     
     <body>
         <h1>Sheet Pan Tofu Crumbles</h1>
+        <img src="../images/tofu.jpg" alt="golden brown tofu crumbles on a sheet pan" height="600" width="400">
+        <h2>Description</h2>
+        <p>These savory tofu crumbles make an excellent meat substitute. Add to pasta sauce, taco filling, or serve with rice and veggies!</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>2 blocks (350g each) extra-firm tofu, drained</li>
+            <li>1/4 cup nutritional yeast</li>
+            <li>2 tablespoons olive oil</li>
+            <li>2 tablespoons tamari</li>
+            <li>1 teaspoon garlic powder</li>
+            <li>1 teaspoon onion powder</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat your oven to 425F and line a sheet pan with parchment paper.</li>
+            <li>Crumble the blocks of tofu into small bits onto the sheet pan.</li>
+            <li>Add all the other ingredients on top of the tofu and mix everything together by hand</li>
+            <li>Spread the tofu mixture evenly across the sheet pan and bake for 40 minutes, stirring halfway through, until lightly golden.</li>
+        </ol>
+        <p>Adapted from It Doesn't Taste Like Chicken's <a href="https://itdoesnttastelikechicken.com/baked-tofu-bites/">Baked Tofu Bites</a>.</p>
         <a href="../index.html">Home</a>
-
     </body>
 </html>
