Edit recipes/cesar.html recipes/rutabega.html index.html and create images/cesar.jpg images/rutabega.jpg

--- a/recipes/cesar.html
+++ b/recipes/cesar.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recipe</title>
+    <title>Vegan Cesar Dressing</title>
 </head>
 <body>
-    <h1>Recipe</h1>
-    <img>
+    <h1>Vegan Cesar Dressing</h1>
+    <img src="../images/cesar.jpg" alt="bowl of creamy pale yellow dressing surrounded by garlic cloves, lemon, and herbs" height="408" width="612"> 
     <h2>Description</h2>
     <p></p>
     <h2>Ingredients</h2>
