--- a/recipes/rutabega.html
+++ b/recipes/rutabega.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Recipe</title>
+    <title>Rutabega Cloud</title>
 </head>
 <body>
-    <h1>Recipe</h1>
-    <img>
+    <h1>Rutabega Cloud</h1>
+    <img src="../images/rutabega.jpg" alt="white bowl filled with pale yellow mashed rutabega with cracked black pepper on top" height="570" width="380">
     <h2>Description</h2>
     <p></p>
     <h2>Ingredients</h2>
