--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/tofu.html">Sheet Pan Tofu Crumbles</a>
+        <h1>Easy Vegan Recipes</h1>
+        <ul>
+            <li><a href="./recipes/tofu.html">Sheet Pan Tofu Crumbles</a></li>
+            <li><a href="./recipes/cesar.html">Vegan Cesar Dressing</a></li>
+            <li><a href="./recipes/rutabega.html">Rutabega Cloud</a></li>
+        </ul>    
     </body>
 </html>
