edit README.me recipes/cesar.html recipes/rutabega.html

--- a/recipes/cesar.html
+++ b/recipes/cesar.html
@@ -8,22 +8,24 @@
     <h1>Vegan Cesar Dressing</h1>
     <img src="../images/cesar.jpg" alt="bowl of creamy pale yellow dressing surrounded by garlic cloves, lemon, and herbs" height="408" width="612"> 
     <h2>Description</h2>
-    <p></p>
+    <p>Creamy vegan cesar dressing that is ready in minutes!</p>
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>1/2 cup vegan yogurt</li>
+        <li>2 tablespoons nutritional yeast</li>
+        <li>2 tablespoons lemon juice</li>
+        <li>1 tablespoon dijon mustard</li>
+        <li>1 tablespoon olive oil</li>
+        <li>1 tablespoon tamari</li>
+        <li>1 tablespoon maple syrup</li>
+        <li>2 teaspoons capers + 1/2 teaspoon of their brine</li>
+        <li>1 teasoon minced garlic</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li> 
+        <li>Add all ingredients to a jar or measuring jug and blend with an immersion blender.</li>
+        <li>Serve as a dressing for cesar salad or use as a dip!</li>
+         
     </ol>
     <a href="../index.html">Home</a>
 </body>
