--- a/recipes/rutabega.html
+++ b/recipes/rutabega.html
@@ -8,22 +8,19 @@
     <h1>Rutabega Cloud</h1>
     <img src="../images/rutabega.jpg" alt="white bowl filled with pale yellow mashed rutabega with cracked black pepper on top" height="570" width="380">
     <h2>Description</h2>
-    <p></p>
+    <p>Steamed rutabega pureed with vegan butter and plant milk makes a fluffy cloud of deliciousness!</p>
     <h2>Ingredients</h2>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>2-3 pounds rutabegas, whole or quartered, depending on size</li>
+        <li>1-2 tablespoon plant milk</li>
+        <li>1-2 tablespoons vegan butter</li>
     </ul>
     <h2>Steps</h2>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li> 
+        <li>Steam rutabegas in a pressure cooker or on the stove top until very tender.</li>
+        <li>Carefully slip the skins off of the steamed rutabegas and return them to the pot.</li>
+        <li>Add plant milk and vegan butter to the rutabegas and puree with an imersion blender.  Add more liquid as needed.</li>
+        <li>Season with salt and pepper and serve hot.</li> 
     </ol>
     <a href="../index.html">Home</a>
 </body>
