--- a/recipes/cesar.html
+++ b/recipes/cesar.html
@@ -25,8 +25,8 @@
     <ol>
         <li>Add all ingredients to a jar or measuring jug and blend with an immersion blender.</li>
         <li>Serve as a dressing for cesar salad or use as a dip!</li>
-         
     </ol>
+    <p>Adapted from Loving It Vegan's <a href="https://lovingitvegan.com/vegan-caesar-dressing/#recipe">Vegan Cesar Dressing</a>.</p>
     <a href="../index.html">Home</a>
 </body>
 </html>
