--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="utf-8">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
         <h1>Easy Vegan Recipes</h1>
-        <ul>
-            <li><a href="./recipes/tofu.html">Sheet Pan Tofu Crumbles</a></li>
-            <li><a href="./recipes/cesar.html">Vegan Cesar Dressing</a></li>
-            <li><a href="./recipes/rutabega.html">Rutabega Cloud</a></li>
-        </ul>    
+        <div>
+            <button><a href="./recipes/tofu.html">Sheet Pan Tofu Crumbles</a></button>
+            <button><a href="./recipes/cesar.html">Vegan Cesar Dressing</a></button>
+            <button><a href="./recipes/rutabega.html">Rutabega Cloud</a></button>
+        </div>    
     </body>
 </html>
